--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
 <html lang="en" class="h-full antialiased light" style="color-scheme: light;">
     <head>
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-M8NV1Y9RDX"></script>
+        <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-M8NV1Y9RDX');
+        </script>
+        
         <title>Filament Handbook</title>
 
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -54,13 +64,6 @@
 
     <body class="flex h-full bg-white dark:bg-black" x-data>
 
-    <div class="fixed inset-0 flex justify-center sm:px-8">
-            <div class="flex w-full max-w-7xl lg:px-8">
-                <div class="w-full bg-white ring-1 ring-stone-100 dark:bg-stone-900 dark:ring-stone-300/20">
-                </div>
-            </div>
-        </div>
-
         <div class="relative flex w-full flex-col">
             <main class="flex-auto">
                 <div class="sm:px-8 mt-10 sm:mt-16">
@@ -69,12 +72,10 @@
                             <div class="mx-auto max-w-2xl lg:max-w-5xl">
                                 <div class="grid grid-cols-1 gap-y-6 md:gap-y-16 lg:grid-cols-2 lg:grid-rows-[auto_1fr] lg:gap-y-12">
                                     <div class="lg:pl-20">
-                                        <div class="md:max-w-xs lg:max-w-none">
-                                            <h1 class="text-4xl text-center md:text-left font-bold tracking-tight text-stone-800 sm:text-5xl dark:text-stone-100" x-intersect="$el.classList.add('fade-enter')">Filament Form Builder Handbook</h1>
-                                        </div>
+                                        <h1 class="text-4xl text-center lg:text-left font-bold tracking-tight text-stone-800 sm:text-5xl dark:text-stone-100" x-intersect="$el.classList.add('fade-enter')">Filament Form Builder Handbook</h1>
                                     </div>
 
-                                    <div class="lg:order-first lg:row-span-2 md:h-screen md:sticky top-0">
+                                    <div class="lg:order-first lg:row-span-2 lg:h-screen lg:sticky top-0">
                                         <div class="mx-auto flex w-64 rounded-xl bg-slate-600 shadow-xl md:w-80 lg:w-auto">
                                             <img alt="Filament Handbook Cover" fetchpriority="high" loading="lazy"  decoding="async" data-nimg="1" class="w-full" style="color:transparent" srcset="./images/cover.jpg 2480w,
                                                 ./images/cover_680w.jpg 680w"
@@ -89,7 +90,7 @@
                                             Introducing the Filament Handbook eBook series, your go-to quick reference for the awesome <a href="https://filamentphp.com/" class="underline text-[#F59410] hover:text-black visited:text-purple-600">Filament PHP components</a>.
                                             </p>
 
-                                            <p x-intersect="$el.classList.add('fade-enter')">Dive now into the first eBook, dedicated to the Form Builder component, available for only $10 and supercharge your development!</p>
+                                            <p x-intersect="$el.classList.add('fade-enter')">Dive now into the first eBook, dedicated to the Form Builder component, and supercharge your development!</p>
                                         </div>
 
                                         <div class="text-center pt-16">
@@ -108,7 +109,7 @@
 
                                                 <div x-cloak x-show="modalIsOpen" x-transition.opacity.duration.200ms x-trap.inert.noscroll="modalIsOpen" @keydown.esc.window="modalIsOpen = false" @click.self="modalIsOpen = false" class="fixed inset-0 z-30 flex items-end justify-center bg-black/20 p-4 pb-8 backdrop-blur-md sm:items-center lg:p-8" role="dialog" aria-modal="true" aria-labelledby="defaultModalTitle">
                                                     <!-- Modal Dialog -->
-                                                    <div x-show="modalIsOpen" x-transition:enter="transition ease-out duration-200 delay-100 motion-reduce:transition-opacity" x-transition:enter-start="opacity-0 scale-y-0" x-transition:enter-end="opacity-100 scale-y-100" class="flex max-w-lg flex-col gap-4 overflow-hidden rounded-md border border-neutral-300 bg-white text-neutral-600 dark:border-neutral-700 dark:bg-neutral-900 dark:text-neutral-300">
+                                                    <div x-show="modalIsOpen" x-transition:enter="transition ease-out duration-200 delay-100 motion-reduce:transition-opacity" x-transition:enter-start="opacity-0 scale-y-0" x-transition:enter-end="opacity-100 scale-y-100" class="flex max-w-xl flex-col gap-4 overflow-hidden rounded-md border border-neutral-300 bg-white text-neutral-600 dark:border-neutral-700 dark:bg-neutral-900 dark:text-neutral-300">
                                                         <!-- Dialog Header -->
                                                         <div class="flex items-center justify-between border-b border-neutral-300 bg-neutral-50/60 p-4 dark:border-neutral-700 dark:bg-neutral-950/20">
                                                             <h3 id="defaultModalTitle" class="font-semibold tracking-wide text-neutral-900 dark:text-white">Book Preview</h3>
@@ -120,7 +121,7 @@
                                                         </div>
                                                         <!-- Dialog Body -->
                                                         <div class="px-4 py-8 h-4/5 w-fit"> 
-                                                         <object data="book_preview.pdf#view=FitV" type="application/pdf" width="500px" height="500px">
+                                                         <object data="book_preview.pdf#view=FitV" type="application/pdf" class="w-[300px] md:w-[500px] h-[500px]">
                                                             <p>
                                                                 It appears your Web browser is not configured to display PDF files. No worries, just <a href="./book_preview.pdf">click here to download the PDF file.</a>
                                                             </p>
@@ -214,13 +215,13 @@
                 </div>
             </main>
             
-            <footer class="mt-32 flex-none">
+            <footer class="mt-8 lg:mt-32 flex-none">
                 <div class="sm:px-8">
                     <div class="mx-auto w-full max-w-7xl lg:px-8">
                         <div class="border-t border-stone-100 pb-16 pt-10 dark:border-stone-700/40">
                             <div class="relative px-4 sm:px-8 lg:px-12">
                                 <div class="mx-auto max-w-2xl lg:max-w-5xl">
-                                    <div class="flex flex-col items-center justify-center md:justify-end gap-6 sm:flex-row">
+                                    <div class="flex flex-col items-center justify-center lg:justify-end gap-6 sm:flex-row">
                                         <p class="text-sm text-stone-400 dark:text-stone-500"  x-data="{ year: new Date().getFullYear() }">© <span x-text="year"></span> Andréia Bohner. All rights reserved.</p>
                                     </div>
                                 </div>
