--- a/public/index.html
+++ b/public/index.html
@@ -94,7 +94,7 @@
                                         </div>
 
                                         <div class="text-center pt-16">
-                                            <a href="https://filamenthandbook.gumroad.com/l/fiwpt" class="rounded-xl p-4 mt-6 space-y-7 text-base text-white bg-[#F59410] hover:bg-fuchsia-800 shadow-lg dark:text-stone-100">Get the Form Builer eBook for just $10.00</a>
+                                            <a href="https://filamenthandbook.gumroad.com/l/fiwpt" class="rounded-xl p-4 mt-6 space-y-7 text-base text-white bg-[#F59410] hover:bg-fuchsia-800 shadow-lg dark:text-stone-100">Get the Form eBook for just $10.00</a>
                                         </div>
 
                                         <h2 class="text-3xl text-center font-bold pt-14 pb-8 dark:text-stone-100">
