--- a/public/index.html
+++ b/public/index.html
@@ -23,8 +23,8 @@
         <meta property="og:url" content="https://filamenthandbook.com">
         <meta property="og:type" content="website">
         <meta property="og:description" content="Filament PHP Handbook">
-        <meta property="og:image" content="./images/filament-handbook-lights-og.png">
-        <meta property="og:image:secure_url" content="./images/filament-handbook-lights-og.jpg">
+        <meta property="og:image" content="https://www.filamenthandbook.com/images/filament-handbook-lights-og.jpg">
+        <meta property="og:image:secure_url" content="hhttps://www.filamenthandbook.com/images/filament-handbook-lights-og.jpg">
         <meta property="og:image:width" content="1999">
         <meta property="og:image:height" content="1999">
         <meta property="og:image:type" content="image/jpg">
@@ -33,7 +33,7 @@
         <meta name="twitter:title" content="Filament Handbook" />
         <meta name="twitter:creator" content="@andreiabohner">
         <meta name="twitter:description" content="Filament PHP Handbook"/>
-        <meta name="twitter:image" content="./images/filament-handbook-lights-x.png" />
+        <meta name="twitter:image" content="https://www.filamenthandbook.com/images/filament-handbook-lights-x.jpg" />
         <meta name="twitter:domain" content="https://filamenthandbook.com">
 
         <link rel="apple-touch-icon-precomposed" sizes="57x57" href="apple-touch-icon-57x57.png" />
