--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
         <meta property="og:type" content="website">
         <meta property="og:description" content="Filament PHP Handbook">
         <meta property="og:image" content="https://www.filamenthandbook.com/images/filament-handbook-lights-og.jpg">
-        <meta property="og:image:secure_url" content="hhttps://www.filamenthandbook.com/images/filament-handbook-lights-og.jpg">
+        <meta property="og:image:secure_url" content="https://www.filamenthandbook.com/images/filament-handbook-lights-og.jpg">
         <meta property="og:image:width" content="1999">
         <meta property="og:image:height" content="1999">
         <meta property="og:image:type" content="image/jpg">
